# libdnf5-plugin-template

./: CMakeLists.txt  README.md  template.conf  template.cpp
.github/workflows/: build.yml
